tests/specs/run/package_json/invalid_value/install.out
error: Failed to install from package.json

Caused by:
    0: Invalid version requirement
    1: Unexpected character.
         invalid stuff that won't parse
         ~
